Lesson 5 - Doctrine: Added create/delete Note controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,13 +19,13 @@
     </head>
     <body>
         <section class="header">
-            <ul class="menu">
-                <li>
-                    <a href="{{ path('notelist_list_by_category', {'categoryId': 1}) }}">My Summer weekends</a>
-                    <a href="{{ path('notelist_list_by_category', {'categoryId': 2}) }}">My favorite books review</a>
-                    <a href="{{ path('notelist_list_by_category', {'categoryId': 3}) }}">My friends hobbies</a>
-                </li>
-            </ul>
+{#            <ul class="menu">#}
+{#                <li>#}
+{#                    <a href="{{ path('notelist_list_by_category', {'categoryId': 1}) }}">My Summer weekends</a>#}
+{#                    <a href="{{ path('notelist_list_by_category', {'categoryId': 2}) }}">My favorite books review</a>#}
+{#                    <a href="{{ path('notelist_list_by_category', {'categoryId': 3}) }}">My friends hobbies</a>#}
+{#                </li>#}
+{#            </ul>#}
         </section>
         {% block body %}{% endblock %}
     </body>
