--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             {% block title %}
                 Welcome!
@@ -49,6 +50,16 @@
             </div>
         </div>
     </nav>
-    {% block body %}{% endblock %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9 mt-3">
+                {% block body %}{% endblock %}
+            </div>
+            <div class="col-3">
+{#                TODO: implement sidebar #}
+            </div>
+        </div>
+    </div>
     </body>
 </html>
