--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,14 @@
 
     <div class="container">
         <div class="row">
+            <div class="mt-3">
+                {% for message in app.flashes('success') %}
+                    <div class="alert alert-success" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+
             <div class="col-9 mt-3">
                 {% block body %}{% endblock %}
             </div>
