--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,21 +32,6 @@
                         <a class="nav-link" aria-current="page" href="{{ path('page_home') }}">Home</a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Categories
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            {% for category in get_categories() %}
-                                <li>
-                                    <a class="dropdown-item" href="{{ path('notelist_list_by_category', {'categoryId': category.id }) }}">
-                                        {{ category.title }}
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ path('notelist_create') }}">Add new notelist</a>
                     </li>
@@ -55,7 +40,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container app-sidebar">
         <div class="row">
             <div class="mt-3">
                 {% for message in app.flashes('success') %}
@@ -69,7 +54,43 @@
                 {% block body %}{% endblock %}
             </div>
             <div class="col-3">
-{#                TODO: implement sidebar #}
+
+                <div class="card w-100">
+                    <div class="card-header">
+                        <b>Categories</b>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        {% for category in get_categories() %}
+                            <li class="list-group-item">
+                                <div class="row">
+                                    <div class="col-10">
+                                        <a href="{{ path('notelist_list_by_category', {'categoryId': category.id }) }}">
+                                            {{ category.title }}
+                                        </a>
+                                    </div>
+                                    <div class="col-2">
+                                        <a href="{{ path('category_delete', {'categoryId': category.id}) }}" class="btn btn-danger p-2">
+                                            x
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+                        {% endfor %}
+                        <li class="list-group-item">
+                            <form action="{{ path('category_add') }}" method="POST">
+                                <div class="row g-3">
+                                    <div class="col-8">
+                                        <input name="name" type="text" class="form-control" placeholder="Name">
+                                    </div>
+                                    <div class="col-4">
+                                        <button type="submit" class="form-control" aria-label="Last name">Create</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
         </div>
     </div>
