Lesson 8 - Validation, security: Implemented validation for entities

--- a/templates/notelist/create.html.twig
+++ b/templates/notelist/create.html.twig
@@ -9,12 +9,12 @@
             <form class="row g-3" method="POST">
                 <div class="col-12">
                     <label for="inputTitle" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="inputTitle" name="title">
+                    <input type="text" class="form-control" id="inputTitle" name="title" required>
                 </div>
 
                 <div class="col-12">
                     <label for="inputText" class="form-label">Text</label>
-                    <textarea class="form-control" id="inputText" name="text"></textarea>
+                    <textarea class="form-control" id="inputText" name="text" required></textarea>
                 </div>
 
                 <div class="col-12">
