--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,6 +48,11 @@
                         {{ message }}
                     </div>
                 {% endfor %}
+                {% for message in app.flashes('fail') %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
             </div>
 
             <div class="col-9 mt-3">
@@ -80,7 +85,7 @@
                             <form action="{{ path('category_add') }}" method="POST">
                                 <div class="row g-3">
                                     <div class="col-8">
-                                        <input name="name" type="text" class="form-control" placeholder="Name">
+                                        <input name="name" type="text" class="form-control" placeholder="Name" required>
                                     </div>
                                     <div class="col-4">
                                         <button type="submit" class="form-control" aria-label="Last name">Create</button>
