--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,18 @@
             <div class="col-9 mt-3">
                 {% block body %}{% endblock %}
             </div>
-            <div class="col-3">
+            <div class="col-3 mt-3">
+                <div class="card w-100 mb-3">
+                    <div class="card-header">
+                        <b>Registration</b>
+                    </div>
+
+                    <form action="{{ path('user_registration') }}" method="POST" class="p-3">
+                        <input name="username" type="text" class="form-control mb-2" placeholder="Username" required>
+                        <input name="password" type="password" class="form-control mb-2" placeholder="Password" required>
+                        <button type="submit" class="form-control mb-2" aria-label="Last name">Register</button>
+                    </form>
+                </div>
 
                 <div class="card w-100">
                     <div class="card-header">
