--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,10 +31,10 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ path('page_home') }}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{ path('notelist_create') }}">Add new notelist</a>
-                    </li>
                     {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{{ path('notelist_create') }}">Add new notelist</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ path('user_logout') }}">Logout</a>
                         </li>
@@ -90,6 +90,7 @@
                 </div>
                 {% endif %}
 
+                {% if app.user %}
                 <div class="card w-100">
                     <div class="card-header">
                         <b>Categories</b>
@@ -125,6 +126,7 @@
                         </li>
                     </ul>
                 </div>
+                {% endif %}
 
             </div>
         </div>
