--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ path('notelist_create') }}">Add new notelist</a>
                         </li>
+                        {% if is_granted("ROLE_ADMIN") %}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{{ path('user_list') }}">User list</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ path('user_logout') }}">Logout</a>
                         </li>
