Lesson 13 - MySQL: Implemented Visit Activity action

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="{{ path('user_list') }}">User list</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{{ path('activity_visit') }}">Visit activity</a>
+                            </li>
                         {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ path('user_logout') }}">Logout</a>
