--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,9 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{{ path('activity_note') }}">Note edit activity</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ path('user_logout') }}">Logout</a>
                         </li>
                     {% endif %}
