--- a/templates/notelist/create.html.twig
+++ b/templates/notelist/create.html.twig
@@ -6,30 +6,14 @@
     <div class="card">
         <h5 class="card-header">Add new note</h5>
         <div class="card-body">
-            <form class="row g-3" method="POST">
-                <div class="col-12">
-                    <label for="inputTitle" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="inputTitle" name="title" required>
-                </div>
+            {{ form_start(form) }}
+                {{ form_errors(form) }}
+                {{ form_help(form) }}
+                {{ form_rest(form) }}
 
-                <div class="col-12">
-                    <label for="inputText" class="form-label">Text</label>
-                    <textarea class="form-control" id="inputText" name="text" required></textarea>
-                </div>
+                <input type="submit" value="Create Note" class="btn btn-success" />
 
-                <div class="col-12">
-                    <label for="inputCategory" class="form-label">Category</label>
-                    <select id="inputCategory" class="form-select" name="category_id">
-                        {% for category in categories %}
-                            <option value="{{ category.id }}">{{ category.title }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-
-                <div class="col-12">
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </div>
-            </form>
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
