--- a/templates/notelist/list.html.twig
+++ b/templates/notelist/list.html.twig
@@ -6,7 +6,12 @@
     {% for note in notes %}
         <div class="card mb-3">
             <div class="card-body">
-                <h5 class="card-title">{{ note.title }}</h5>
+                <div class="card-title d-flex justify-content-between">
+                    <h5 class="">{{ note.title }}</h5>
+                    {% if app.user.id != note.user.id %}
+                       <i class="bi bi-link text-success"></i>
+                    {% endif %}
+                </div>
                 <p class="card-text">{{ note.text }}</p>
                 <a href="{{ path('notelist_get', {'id': note.id}) }}" class="btn btn-primary">
                     Read
