Lesson 16 - Pagination: Fixed visits activity visualisation

--- a/templates/activity/visit.html.twig
+++ b/templates/activity/visit.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td>{{ item.created_at }}</td>
                 <td>{{ item.user_id }}</td>
-                <td>{{ item.url }}</td>
+                <td class="brake-word">{{ item.url }}</td>
                 <td>{{ item.method }}</td>
                 <td>{{ item.ip }}</td>
                 <td>{{ item.status_code }}</td>
