--- a/templates/activity/visitQB.html.twig
+++ b/templates/activity/visitQB.html.twig
@@ -19,10 +19,10 @@
             <tr>
                 <td>{{ activity.createdAt|date("Y-m-d H:i:s", "Europe/Kiev") }}</td>
                 <td>{{ activity.user ? activity.user.username : '-' }}</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
+                <td class="brake-word">{{ activity.url }}</td>
+                <td>{{ activity.method }}</td>
+                <td>{{ activity.ip }}</td>
+                <td>{{ activity.statusCode }}</td>
             </tr>
             {% endfor %}
         </tbody>
@@ -38,7 +38,7 @@
             <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 2}) }}">2</a></li>
             <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 3}) }}">3</a></li>
             <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 4}) }}">4</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 5}) }}"">5</a></li>
+            <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 5}) }}">5</a></li>
             <li class="page-item"><a class="page-link" href="{{ path('activity_visit-qb', {page: 6}) }}">6</a></li>
             <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
