Lesson 17 - Pagination Part2: Created pagination template

--- a/templates/activity/visit.html.twig
+++ b/templates/activity/visit.html.twig
@@ -27,24 +27,5 @@
             {% endfor %}
         </tbody>
     </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 1}) }}">1</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 2}) }}">2</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 3}) }}">3</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 4}) }}">4</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 5}) }}">5</a></li>
-            <li class="page-item"><a class="page-link" href="{{ path('activity_visit', {page: 6}) }}">6</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    {{ include('pagination.html.twig') }}
 {% endblock %}
