--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -1,19 +1,27 @@
-{% set currentPage = app.request.query.get('page') ? : 1 %}
+{% set currentPage = max(app.request.query.get('page') ? : 1, 1) %}
 {% set currentRoute = app.request.attributes.get('_route') %}
-<nav aria-label="Page navigation">
-    <ul class="pagination">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        {% for page in 1..lastPage %}
-            <li class="page-item {{ page == currentPage ? 'active' : '' }}"><a class="page-link" href="{{ path(currentRoute, {page: page}) }}">{{ page }}</a></li>
-        {% endfor %}
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+{% if lastPage > 1 %}
+<div class="mb-12">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            {% if currentPage > 1 %}
+            <li class="page-item">
+                <a class="page-link" href="{{ path(currentRoute, {page: currentPage - 1}) }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            {% endif %}
+            {% for page in 1..lastPage %}
+                <li class="page-item {{ page == currentPage ? 'active' : '' }}"><a class="page-link" href="{{ path(currentRoute, {page: page}) }}">{{ page }}</a></li>
+            {% endfor %}
+            {% if currentPage != lastPage %}
+                <li class="page-item">
+                    <a class="page-link" href="{{ path(currentRoute, {page: currentPage + 1}) }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+</div>
+{% endif %}
