Lesson 17 - Pagination Part2: Added Edit note activity pagination

--- a/templates/activity/note.html.twig
+++ b/templates/activity/note.html.twig
@@ -8,13 +8,15 @@
         <tr>
             <th scope="col">Created at</th>
             <th scope="col">Note name</th>
+            <th scope="col">Edited By</th>
         </tr>
         </thead>
         <tbody>
             {% for item in data %}
             <tr>
-                <td>{{ item.created_at }}</td>
-                <td>{{ item.note_name }}</td>
+                <td>{{ item.createdAt|date("Y-m-d H:i:s", "Europe/Kiev") }}</td>
+                <td>{{ item.note.title }}</td>
+                <td>{{ item.user.username }}</td>
             </tr>
             {% endfor %}
         </tbody>
