--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -1,6 +1,7 @@
 {% set currentPage = max(app.request.query.get('page') ? : 1, 1) %}
 {% set currentRoute = app.request.attributes.get('_route') %}
-{% set requestParams = app.request.query.all %}
+{% set routeParams = app.request.attributes.get('_route_params')  %}
+{% set requestParams = app.request.query.all|merge(routeParams) %}
 {% set nearbyPageButtons = 2 %}
 {% if lastPage > 1 %}
 <div class="mb-12">
@@ -14,13 +15,13 @@
             </li>
             {% endif %}
             <li class="page-item {{ currentPage == 1 ? 'active' : '' }}"><a class="page-link" href="{{ path(currentRoute, requestParams|merge({page: 1})) }}">{{ 1 }}</a></li>
-            {% if currentPage > nearbyPageButtons + 1 %}
+            {% if currentPage > nearbyPageButtons + 2 %}
             <li class="page-item disabled"><a class="page-link">...</a></li>
             {% endif %}
             {% if lastPage > 2 %}
             {% for page in 2..lastPage-1 %}
                 {% if (page >= currentPage - nearbyPageButtons) and (page <= currentPage + nearbyPageButtons) %}
-                <li class="page-item {{ page == currentPage ? 'active' : '' }}"><a class="page-link" href="{{ path(currentRoute, requestParams|merge({page: page})) }}">{{ page }}</a></li>
+                    <li class="page-item {{ page == currentPage ? 'active' : '' }}"><a class="page-link" href="{{ path(currentRoute, requestParams|merge({page: page})) }}">{{ page }}</a></li>
                 {% endif %}
             {% endfor %}
             {% endif %}
