Lesson 18 - Forms.Advanced: Changes in edited notes visualisation

--- a/templates/activity/note.html.twig
+++ b/templates/activity/note.html.twig
@@ -9,6 +9,7 @@
             <th scope="col">Created at</th>
             <th scope="col">Note name</th>
             <th scope="col">Edited By</th>
+            <th scope="col">Changes</th>
         </tr>
         </thead>
         <tbody>
@@ -17,6 +18,27 @@
                 <td>{{ item.createdAt|date("Y-m-d H:i:s", "Europe/Kiev") }}</td>
                 <td>{{ item.note.title }}</td>
                 <td>{{ item.user.username }}</td>
+                <td class="brake-word">
+                    {% for property in item.changes|keys %}
+                        <div class="row mt-2">
+                            <h5>{{ property }}:</h5>
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <p class="card-text">{{ item.changes[property][0] }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <p class="card-text">{{ item.changes[property][1] }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
