--- a/templates/notelist/get.html.twig
+++ b/templates/notelist/get.html.twig
@@ -9,7 +9,11 @@
             <p class="card-text">{{ note.text }}</p>
         </div>
         <div class="card-header d-flex justify-content-between">
-            <p class="card-text">Category: {{ note.category.title }}</p>
+            <div>
+            {% if app.user.id == note.user.id %}
+                <p class="card-text">Category: {{ note.category.title }}</p>
+            {% endif %}
+            </div>
             <div>
                 <a class="btn btn-outline-danger float-end" href="{{ path('notelist_delete', {'id': note.id}) }}" role="button">
                     Delete
