Lesson 22 - Testing: Implemented User Authentication Tests

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -89,7 +89,7 @@
                         <form action="{{ path('user_login') }}" method="POST" class="p-3">
                             <input name="_username" type="text" class="form-control mb-2" placeholder="Username" required>
                             <input name="_password" type="password" class="form-control mb-2" placeholder="Password" required>
-                            <button type="submit" class="form-control mb-2" aria-label="Last name">Login</button>
+                            <button id="login-form" type="submit" class="form-control mb-2" aria-label="Last name">Login</button>
                         </form>
                     </div>
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
